@@ -62,6 +62,9 @@ The rules for this file:
            - added documentation and examples in the doc strings
 	   - new special dihedral angle selections defined for Residue
              class to simplify analysis of backbone torsions
+    * new contact_matrix method for calculating contacts
+        - for large (N > ~10000) coordinate arrays automatically switches
+          to a method using a sparse matrix (slower)
 
 09/19/10 orbeckst
 	* quick-fix release 0.6.4.1
